# py-basics-labs

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
basics/: структура.ipynb
basics/01_env/: hello.ipynb
basics/06_functions/: functions.py
basics/17_fastapi_intro/: app.py
basics/Variables_and_Data_Types/: vars_types.ipynb
docs/issues/: 96python_setup.ipynb  README.md  TEMPLATE_issue_notes.md
ops_cli/: __main__.py  cli.py  main.py
ops_cli/commands/: greet.py  sum.py
tests/: test_env.py  test_functions.py  test_greet.py  test_sum.py
